--- a/eu4d_android/build.gradle
+++ b/eu4d_android/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 dependencies {
+    implementation project(':eu4d_kotlin')
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
