--- a/eu4d_android/src/main/AndroidManifest.xml
+++ b/eu4d_android/src/main/AndroidManifest.xml
@@ -1,2 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ru.dev.gbixahue.eu4d_android" />
+<manifest package="ru.dev.gbixahue.eu4d_android" />
